@@ -1,3 +1,15 @@
+[B]1.3.0[/B]
+- Changed FLAC Login-Token
+- Fallback to API Login-Token if FLAC Login-Token doesn't work
+- Added Video playback
+- Seperate settings for Subscription Type, Music Quality and Video Quality
+- Added Support to edit Favorites and User Playlists
+- Added Recommended Tracks/Videos to context menue
+- Added Artist Bio on artist page
+- Added Setting "Max. number of list items per page"
+- Added German translation
+- Added Trial Mode (30 seconds playback without login)
+
 [B]1.2.2[/B]
 - Fixed album listing due to site changes
 
